fix: sticky action bar with overflow-x clip for responsive width

--- a/src/app/pages/new-work-order/new-work-order.component.scss
+++ b/src/app/pages/new-work-order/new-work-order.component.scss
@@ -7,6 +7,7 @@ $form-content-max-width: calc(#{$field-max-width} * 2 + 24px);
   flex-direction: column;
   flex-grow: 1;
   min-height: 100%;
+  overflow-x: clip;
 }
 
 .new-wo-page {
